# learn-rust

./: .gitignore  Cargo.toml  README.md  newExperiment.sh  run.sh
Experiments/ColoredText/: ColoredText.rs
Experiments/ControlFlow/: ControlFlow.rs
Experiments/DataTypes/: DataTypes.rs  Tuples.rs
Experiments/Enums/: Enums.rs  IfLet.rs  Matching.rs  Revise.rs
Experiments/ErrorHandling/: ErrorHandling.rs  ErrorHandling2.rs  ReturningResults.rs
Experiments/Functions/: Functions.rs
Experiments/GenericTypesTraitsLifetimes/: GenericDataTypes.rs  GenericTypesInStructDefinitions.rs  GenericTypesInStructDefinitions_MethodDefinitions.rs  GenericTypesTraitsLifetimes.rs  aggregrator.rs
Experiments/GuessingGame/: GuessingGame.rs
Experiments/HelloWorld/: HelloWorld.rs
Experiments/Lifetimes/: Lifetimes.rs  OutOfScope.rs
Experiments/Minion/: Minion.rs
Experiments/Mutability/: Mutability.rs
Experiments/NatuurkundeModellen/: NatuurkundeModellen.rs  Util.rs
Experiments/Ownership/: Ownership.rs  References.rs  Slices.rs
Experiments/SeleniumMeme/: Cargo.toml
Experiments/SeleniumMeme/src/: main.rs
Experiments/Structs/: Methods.rs  Structs.rs  StructsExample.rs
Experiments/Vecs/: EncodedText.rs  HashMaps.rs  Vecs.rs
Other exercises/rustlings/01_variables/: variables2.rs  variables3.rs  variables5.rs
Other exercises/rustlings/02_functions/: functions1.rs
Other exercises/rustlings/03_if/: if1.rs  if2.rs  if3.rs
Other exercises/rustlings/04_primitive_types/: primitive_types2.rs  primitive_types3.rs  primitive_types5.rs
Other exercises/rustlings/05_vecs/: vecs2.rs
Other exercises/rustlings/06_move_semantics/: move_semantics4.rs  move_semantics5.rs  move_semantics6.rs
Other exercises/rustlings/07_structs/: structs1.rs  structs2.rs  structs3.rs
Other exercises/rustlings/08_enums/: enums2.rs  enums3.rs
Other exercises/rustlings/09_strings/: strings2.rs  strings3.rs
Other exercises/rustlings/10_modules/: modules2.rs
Other exercises/rustlings/11_hashmaps/: hashmaps1.rs
