workspace = { members = ["Experiments/SeleniumMeme"] }
#──────▄▀▀▄────────────────▄▀▀▄────
#─────▐▒▒▒▒▌──────────────▌▒▒▒▒▌───
#─────▌▒▒▒▒▐─────────────▐▒▒▒▒▒▐───
#────▐▒▒▒▒▒▒▌─▄▄▄▀▀▀▀▄▄▄─▌▒▒▒▒▒▒▌──
#───▄▌▒▒▒▒▒▒▒▀▒▒▒▒▒▒▒▒▒▒▀▒▒▒▒▒▒▐───
#─▄▀▒▐▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▌───
#▐▒▒▒▌▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▐───
#▌▒▒▌▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▌──
#▒▒▐▒▒▒▒▒▒▒▒▒▄▀▀▀▀▄▒▒▒▒▒▄▀▀▀▀▄▒▒▐──
#▒▒▌▒▒▒▒▒▒▒▒▐▌─▄▄─▐▌▒▒▒▐▌─▄▄─▐▌▒▒▌─
#▒▐▒▒▒▒▒▒▒▒▒▐▌▐█▄▌▐▌▒▒▒▐▌▐█▄▌▐▌▒▒▐─
#▒▌▒▒▒▒▒▒▒▒▒▐▌─▀▀─▐▌▒▒▒▐▌─▀▀─▐▌▒▒▒▌
#▒▌▒▒▒▒▒▒▒▒▒▒▀▄▄▄▄▀▒▒▒▒▒▀▄▄▄▄▀▒▒▒▒▐
#▒▌▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▄▄▄▒▒▒▒▒▒▒▒▒▒▒▐
#▒▌▒▒▒▒▒▒▒▒▒▒▒▒▀▒▀▒▒▒▀▒▒▒▀▒▀▒▒▒▒▒▒▐
#▒▌▒▒▒▒▒▒▒▒▒▒▒▒▒▀▒▒▒▄▀▄▒▒▒▀▒▒▒▒▒▒▒▐
#▒▐▒▒▒▒▒▒▒▒▒▒▀▄▒▒▒▄▀▒▒▒▀▄▒▒▒▄▀▒▒▒▒▐
#▒▓▌▒▒▒▒▒▒▒▒▒▒▒▀▀▀▒▒▒▒▒▒▒▀▀▀▒▒▒▒▒▒▐
#▒▓▓▌▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▌
#▒▒▓▐▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▌─
#▒▒▓▓▀▀▄▄▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▐──
#▒▒▒▓▓▓▓▓▀▀▄▄▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▄▄▀▀▒▌─
#▒▒▒▒▒▓▓▓▓▓▓▓▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▒▒▒▒▒▐─
#▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▌

[package]
name = "learn_rust"
version = "1.0.0"
edition = "2021"

[dependencies]
colored = "2.1.0"
plotters = "0.3.5"
rand = "0.8.5"


# Each experiment must be listed here.
[[bin]]
name = "GuessingGame"
path = "Experiments/GuessingGame/GuessingGame.rs"

[[bin]]
name = "HelloWorld"
path = "Experiments/HelloWorld/HelloWorld.rs"

[[bin]]
name = "Mutability"
path = "Experiments/Mutability/Mutability.rs"

[[bin]]
name = "ColoredText"
path = "Experiments/ColoredText/ColoredText.rs"

[[bin]]
name = "DataTypes"
path = "Experiments/DataTypes/DataTypes.rs"
[[bin]]
name = "Tuples"
path = "Experiments/DataTypes/Tuples.rs"

[[bin]]
name = "Functions"
path = "Experiments/Functions/Functions.rs"

[[bin]]
name = "ControlFlow"
path = "Experiments/ControlFlow/ControlFlow.rs"

[[bin]]
name = "Ownership"
path = "Experiments/Ownership/Ownership.rs"

[[bin]]
name = "Structs"
path = "Experiments/Structs/Structs.rs"

[[bin]]
name = "Enums"
path = "Experiments/Enums/Enums.rs"

[[bin]]
name = "Vecs"
path = "Experiments/Vecs/Vecs.rs"

[[bin]]
name = "Minion"
path = "Experiments/Minion/Minion.rs"

[[bin]]
name = "ErrorHandling"
path = "Experiments/ErrorHandling/ErrorHandling.rs"

[[bin]]
name = "NatuurkundeModellen"
path = "Experiments/NatuurkundeModellen/NatuurkundeModellen.rs"

[[bin]]
name = "GenericTypesTraitsLifetimes"
path = "Experiments/GenericTypesTraitsLifetimes/GenericTypesTraitsLifetimes.rs"

[[bin]]
name = "Lifetimes"
path = "Experiments/Lifetimes/Lifetimes.rs"
